--- a/app/globals.css
+++ b/app/globals.css
@@ -1,1 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Cal+Sans&display=swap');
 @import "tailwindcss";
+
+.title {
+    font-family: "Cal Sans", sans-serif;
+}
