--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Cal+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import "tailwindcss";
 
 .title {
     font-family: "Cal Sans", sans-serif;
+}
+
+.desc {
+    font-family: "Courier Prime", monospace;
 }
